@@ -1,5 +1,13 @@
 2010-09-23  Nate Chapin  <japhet@chromium.org>
 
+        Unreviewed, build fix.
+
+        Add a missing comma in webkitwebsettings.cpp.
+
+        * webkit/webkitwebsettings.cpp:
+
+2010-09-23  Nate Chapin  <japhet@chromium.org>
+
         Reviewed by Darin Fisher.
 
         Add hyperlink auditing settings (i.e., <a ping>).
